11.6:
	add from/JIS (including JIS0201/JIS0208/JIS0212)
	add from/CP950-UDA
	add from/{_CP1254,_CP1255,_CP1256,_CP1257,_CP1258}
	from/FALLBACK-UNICODE
	fix bug in from/{_CP936,_CP874,_CP1253}

11.5:
	add inter/NULL

11.4:
	update to unicode 9.0.0
	generate width data from ucd/EastAsianWidth.txt
	add inter/{SUB,SUPER}
	bug fixes

11.3:
	update to unicode 7.0.0
	deprecate bsdconv_codecs_list() by bsdconv_modules_list(), old symbol will be remained until next major release
	deprecate bsdconv_codec_check() by bsdconv_module_check(), old symbol will be remained until next major release
	add filter/{CYRILLIC,HANGUL,HIRAGANA,KATAKANA,KHMER,LATIN1,MAHJONG,PRINT,ROMAN,THAI}
	replace inter/ZH-STRINGS with inter/STRINGS which accepts filter
	add scorer infrastructure
	add scorer/{CJK,LATIN1}
	add output mode BSDCONV_PASS
	add zsh auto completion script

11.2:	(2014-01-17)
	improve inter/{UPPER,LOWER} (include mapping in SpecialCasing.txt)
	add inter/CASEFOLD (C/F in CASEFOLD.txt)
	Update inter/SCORE, inter/SCORE_TRAIN, with manpages.
	Improve worst-case performance for inter/_NF-ORDER
	Unify map file structure on all platform
	add inter/REPLACE and alias inter/NOBOM to inter/REPLACE#01FEFF
	Update documentations
	support DESTDIR in makefile
	be case-sensitive for codec arguments (for bsdconv-opencc)
	update to/_CP950
	add from/_HKSCS{1999,2001,2004}
	add from/_BIG5{E,-2003,-ETEN}
	add inter/ZH-BONUS and inter/ZH-BONUS-PHRASE
	add filter infrastructure

11.1:	(2013-09-16)
	Correct algorithm for unicode normalization

11.0:	(2013-08-25)
	add man page for inter/AMBIGUOUS-PAD and inter/AMBIGUOUS-UNPAD
	add inter/{NFC,NFD,NFKC,NFKD} #UnicodeData
	improve inter/{UPPER,LOWER} #UnicodeData
	add inter/PASS
	add unified counter interface
	replace inter/ERROR with newly added inter/COUNT
	replace inter/SPLIT with newly added inter/INSERT
	support data list for codec argument

10.0:	(2013-04-24)
	support "codec#key&key=value" style argument
	replace from/3f and from/sub with from/any